--- a/src/content/docs/current/Guides/Your First Shader/1_composite.mdx
+++ b/src/content/docs/current/Guides/Your First Shader/1_composite.mdx
@@ -37,7 +37,7 @@ When you select the shader in the shader selection screen, you should not see an
 ## The `composite` Pass
 For this shader, we will be using the first `composite` pass. This is a full screen pass which runs just after all gbuffers programs have rendered.
 
-First, let's open `composite.vsh`. This is the *vertex shader* for the `composite` program. Since `composite` is a fullscreen pass, this actually just renders a singular quad (a rectangular polygon) to the screen which exactly covers it. This means that your fullscreen passes are technically actually running on 3D geometry! Specifically, the vertex shader will run four times, one for each corner of this quad.
+First, let's open `composite.vsh`. This is the **vertex shader** for the `composite` program. Since `composite` is a fullscreen pass, this actually just renders a singular quad (a rectangular polygon) to the screen which exactly covers it. This means that your fullscreen passes are technically actually running on 3D geometry! Specifically, the vertex shader will run four times, one for each corner of this quad.
 
 ```glsl
 #version 330 compatibility
@@ -87,10 +87,10 @@ texcoord = (gl_TextureMatrix[0] * gl_MultiTexCoord0).xy;
 This gives us the 'texture coordinate' of the current vertex. This is more commonly known as the 'UV', and it is used so that the fragment shader knows where on the screen it is. These texture coordinates range from (0, 0) at the bottom left of the texture to (1, 1) at the top right.
 
 :::tip[Swizzling]
-In the previous line of code, you might have noticed some weird syntax: `.xy`. This is an operation unique to shading languages known as *swizzling*. You can read more about swizzling [here](https://www.khronos.org/opengl/wiki/Data_Type_(GLSL)#Swizzling).
+In the previous line of code, you might have noticed some weird syntax: `.xy`. This is an operation unique to shading languages known as **swizzling**. You can read more about swizzling [here](https://www.khronos.org/opengl/wiki/Data_Type_(GLSL)#Swizzling).
 :::
 
-Let's open `composite.fsh`. This is the *fragment shader*, and since `composite` is a *full screen pass*, it runs for every pixel on the screen.
+Let's open `composite.fsh`. This is the **fragment shader**, and since `composite` is a full screen pass, it runs for every pixel on the screen.
 
 Right now the code looks like this
 
