--- a/src/content/docs/current/Guides/Your First Shader/4_shadows.mdx
+++ b/src/content/docs/current/Guides/Your First Shader/4_shadows.mdx
@@ -81,7 +81,7 @@ You might be able to see parts of your terrain disappearing from the shadow map 
 :::
 
 ## Getting the Position in Shadow Space
-To check if a pixel is shadowed, we need to know where in the shadow map it is. We can do this by transforming the position of the pixel into *shadow space*. We will need the following transformation matrices:
+To check if a pixel is shadowed, we need to know where in the shadow map it is. We can do this by transforming the position of the pixel into **shadow space**. We will need the following transformation matrices:
 
 ```glsl
 uniform mat4 gbufferProjectionInverse;
@@ -93,7 +93,7 @@ uniform mat4 shadowProjection;
 
 To do this, we first need to determine the position of the pixel at all. We can do this using the screen texture coordinate, as well as the depth. For more information on these space conversions, see [Coordinate Spaces](/current/how-to/coordinate_spaces).
 
-To do these space conversions, we will make use of a function, `projectAndDivide`. This function applies a projection matrix and then divides by the `w` component, skipping clip space. **Place this function definition outside and before `main` but after the declaration of `texcoord`.**
+To do these space conversions, we will make use of a function, `projectAndDivide`. This function applies a projection matrix and then divides by the `w` component, skipping clip space. Place this function definition outside and before `main` but after the declaration of `texcoord`.
 
 ```glsl
 vec3 projectAndDivide(mat4 projectionMatrix, vec3 position){
@@ -166,10 +166,10 @@ The easy solution here would be to just increase the shadow map resolution to so
 Shadow distortion as we are applying it is quite an old technique, and does not work as well as other, more modern methods for optimising use of shadow maps like [Cascaded Shadow Maps](https://learnopengl.com/Guest-Articles/2021/CSM). For example, it tends to create large blobs of shadow on the centre of triangles, because GPUs can't draw curved triangles. However, due to the limitations of the Optifine/Iris pipeline, it's quite hard to do anything more advanced, so this is what we are sticking with.
 :::
 
-For our shadow distortion, we want to scale things to make stuff closer to the player occupy more space in the shadow map, squashing the stuff that's further away towards the edges. We are going to do this operation in *shadow clip space*. Let's make a new function which takes in a position in shadow screen space, distorts it, and returns it. We want to access this function within both `shadow.vsh` and `composite.fsh`, so we are going to make use of a GLSL feature called `#include`. This lets us include code from one file inside multiple other files.
+For our shadow distortion, we want to scale things to make stuff closer to the player occupy more space in the shadow map, squashing the stuff that's further away towards the edges. We are going to do this operation in **shadow clip space**. Let's make a new function which takes in a position in shadow screen space, distorts it, and returns it. We want to access this function within both `shadow.vsh` and `composite.fsh`, so we are going to make use of a GLSL feature called `#include`. This lets us include code from one file inside multiple other files.
 
 :::note[Note]
-`#include` is a *preprocessor directive*. This means it runs when your code is compiled. When the GLSL compiler finds this directive, it replaces it with the contents of the specified file.
+`#include` is a **preprocessor directive**. This means it runs when your code is compiled. When the GLSL compiler finds this directive, it replaces it with the contents of the specified file.
 :::
 
 Let's make a new file called `distort.glsl`. We'll put it in a folder called `lib` for the sake of organisation.
@@ -186,17 +186,15 @@ We can then add
 ```glsl
 #include /lib/distort.glsl
 ```
-to our `shadow.vsh`. *This should be included before the `main` function, as you cannot define functions within a function.* I put mine just before my `out` declarations.
-
-**We should also move our declaration of `shadowMapResolution` to `distort.glsl`.** This way, we can access this variable anywhere we are sampling the shadow map.
+to our `shadow.vsh`. This should be included before the `main` function, as you cannot define functions within a function. I put mine just before my `out` declarations. We should also move our declaration of `shadowMapResolution` to `distort.glsl`. This way, we can access this variable anywhere we are sampling the shadow map.
 
 :::caution[Warning]
-Preprocessor directives *do not have a semicolon on the end*.
+Preprocessor directives do *not* have a semicolon on the end.
 :::
 
 Within `distort.glsl`, let's write a function `distortShadowClipPos`. This function is the one we described earlier.
 
-So, how do we actually distort the position? Well, in shadow clip space, all positions are between `-1.0` and `1.0`. Now, as the distance from the position to the origin (where the player is) increases, we want to make that distance even greater by pushing it closer to the edge. What we can do is *divide the position by the distance to the origin*.
+So, how do we actually distort the position? Well, in shadow clip space, all positions are between `-1.0` and `1.0`. Now, as the distance from the position to the origin (where the player is) increases, we want to make that distance even greater by pushing it closer to the edge. To solve this, we can divide the position by the distance to the origin.
 
 ```glsl
 // /lib/distort.glsl
@@ -233,7 +231,7 @@ At this point, let's write the shadow map to the screen again to check what it l
 
 As expected, stuff in the middle of the shadow map has been expanded to take up more space!
 
-To apply this distortion when sampling the shadow map, we will `#include /lib/distort.glsl` in `composite.fsh`, and then apply the distortion to our shadow clip position *after the bias*.
+To apply this distortion when sampling the shadow map, we will `#include /lib/distort.glsl` in `composite.fsh`, and then apply the distortion to our shadow clip position *after* the bias.
 
 ```glsl
 // composite.fsh
@@ -254,7 +252,7 @@ Our shadows now look nice and sharp near the player!
 If you look at something like stained glass, you'll see that it casts a solid shadow. This doesn't really make sense, since (it being partially translucent) it should be letting some light through. Handily, there are a couple of extra shadowmaps we can access to help us with this.
 
 - `shadowtex0` contains everything that casts a shadow
-- `shadowtex1` contains only things which are *fully opaque* and cast a shadow
+- `shadowtex1` contains only things which are fully opaque and cast a shadow
 - `shadowcolor0` contains the color (including how transparent it is) of things which cast a shadow.
 
 We will of course need to add these other two shadow maps as uniform declarations alongside `shadowtex0`.
@@ -314,7 +312,7 @@ vec3 shadow = getShadow(shadowScreenPos);
 and we now get nice colored shadows!
 
 ## Softer Shadows
-The final piece of the puzzle is those nasty jagged edges on our shadows. This is called *aliasing*, and is another artifact of the limited resolution on our shadow map. If you look at real shadows, you'll also notice that they don't tend to have clean, sharp edges. Instead, they seem to have a slightly softer edge. This area at the edge of the shadow is known as the *penumbra*.
+The final piece of the puzzle is those nasty jagged edges on our shadows. This is called **aliasing**, and is another artifact of the limited resolution on our shadow map. If you look at real shadows, you'll also notice that they don't tend to have clean, sharp edges. Instead, they seem to have a slightly softer edge. This area at the edge of the shadow is known as the **penumbra**.
 
 ![](../../../../../assets/beginner_tutorial/penumbra.webp)
 [Image Source: Wikipedia](https://commons.wikimedia.org/w/index.php?curid=3675853)
@@ -333,7 +331,7 @@ This will remove the curved edges on the shadows, making them even more jagged, 
 
 ![](../../../../../assets/beginner_tutorial/jaggedshadows.webp)
 
-To blur our shadows, we are going to be using something known as *percentage closer filtering*. To do this, we take multiple shadow samples within an area around the position and average them. To do this, we will be using a loop. Within this loop, we will generate an offset from the shadow position, apply it in clip space, and then convert to screen space before our shadow samples. 
+To blur our shadows, we are going to be using something known as **percentage closer filtering**. To do this, we take multiple shadow samples within an area around the position and average them. To do this, we will be using a loop. Within this loop, we will generate an offset from the shadow position, apply it in clip space, and then convert to screen space before our shadow samples. 
 
 First, we should define how many samples we are going to take, and how far we should offset our samples. We can do this with a preprocessor directive which we can later make configurable in the settings menu.
 
