fixed macOS buffers
apparently macOS has 16 colortexes in Iris

--- a/src/content/docs/current/Reference/Miscellaneous/macos.mdx
+++ b/src/content/docs/current/Reference/Miscellaneous/macos.mdx
@@ -13,7 +13,7 @@ Apple does not provide support for OpenGL past version 4.1 on macOS. Additionall
 - [SSBOs](/current/reference/buffers/ssbo)
 - [atomic counting](https://www.khronos.org/opengl/wiki/Atomic_Counter)
 
-Additionally, macOS only provides 8 colortex buffers, as opposed to the standard 16.
+Additionally, in OptiFine, macOS only has access to 8 [color textures](/current/reference/buffers/colortex). In Iris, macOS has access to all 16 buffers.
 
 ### Workarounds
 
