Updated the How Tos

--- a/src/content/docs/current/How To/pbr_standards.mdx
+++ b/src/content/docs/current/How To/pbr_standards.mdx
@@ -60,5 +60,6 @@ MC_TEXTURE_FORMAT_LAB_PBR
 MC_TEXTURE_FORMAT_LAB_PBR_1_3
 ```
 
-**Note:** At the time of writing, the only supported LabPBR version is 1.3. **Specifying other versions in a texture pack may cause errors.**
-
+:::caution[Warning]
+At the time of writing, the only supported LabPBR version is 1.3. Specifying other versions in a texture pack may cause errors.
+:::
