--- a/src/content/docs/current/Reference/Miscellaneous/entity_properties.mdx
+++ b/src/content/docs/current/Reference/Miscellaneous/entity_properties.mdx
@@ -26,3 +26,4 @@ The following entity IDs do not exist in Minecraft but are hardcoded by Iris:
 - `minecraft:zombie_villager_converting`: A zombie villager undergoing conversion.
 - `minecraft:player_cape`: Player cape (without elytra).
 - `minecraft:elytra_with_cape`: Player cape (with elytra).
+- `minecraft:current_player`: The current player only.
