fix: spell "tessellation" right where applicable

--- a/src/content/docs/current/Reference/Programs/overview.mdx
+++ b/src/content/docs/current/Reference/Programs/overview.mdx
@@ -82,4 +82,4 @@ Unlike fragment shaders, compute shaders cannot directly write to color attachme
 
 Tessellation shaders allow splitting of a single triangle into multiple triangles during runtime. This can be used to add more detail to displaced geometry such as for waving water effects or displacement maps. For more information, see the [Khronos Wiki](https://www.khronos.org/opengl/wiki/tessellation).
 
-Iris supports tessellation only for gbuffers-style passes. It recognizes the tessellation control shader in a `.tcs` file, and the tessellation evaluation shader in a `.tes` file. Only triangles are supported (no quads or isolines). The [`TESSELATION_SHADERS`](/current/reference/shadersproperties/flags) feature flag is required to use tessellation shaders.
+Iris supports tessellation only for gbuffers-style passes. It recognizes the tessellation control shader in a `.tcs` file, and the tessellation evaluation shader in a `.tes` file. Only triangles are supported (no quads or isolines). The [`TESSELLATION_SHADERS`](/current/reference/shadersproperties/flags) feature flag is required to use tessellation shaders.
