--- a/src/content/docs/current/Reference/Shaders.Properties/flags.mdx
+++ b/src/content/docs/current/Reference/Shaders.Properties/flags.mdx
@@ -43,4 +43,4 @@ The following is an index of all supported feature flags. Any feature flag marke
 | `REVERSED_CULLING`                             | ❌                | Queries support for [reverse shadow culling](/current/reference/constants/voxeldistance)                             |
 | `SEPARATE_HARDWARE_SAMPLERS`                   | ✔️                | Enables [separate hardware shadow samplers](/current/reference/buffers/shadowtex#hardware-sampling)                  |
 | `SSBO`                                         | ✔️                | Enables [SSBOs](/current/reference/buffers/ssbo)                                                                     |
-| `TESSELATION_SHADERS` / `TESSELLATION_SHADERS` | ✔️                | Enables tesselation shaders                                                                                  |
+| `TESSELATION_SHADERS` / `TESSELLATION_SHADERS` | ✔️                | Enables tessellation shaders                                                                                  |
