fix saada tutorial link

--- a/src/content/docs/current/Guides/Your First Shader/0_intro.mdx
+++ b/src/content/docs/current/Guides/Your First Shader/0_intro.mdx
@@ -15,7 +15,7 @@ This tutorial is still being developed. Some statements may be incorrect, and th
 
 
 ## Foreward
-This tutorial is based on one written by [saada2006](https://saada2006.github.io/minecraft-shader-tutorials/). This newer tutorial has been necessitated by the fact that since the tutorial was written, the general state of development on Minecraft shaders has advanced somewhat, and other developers have identified several areas where this can be improved.
+This tutorial is based on one written by [saadam1n](https://github.com/saadam1n/MinecraftShaderProgramming). This newer tutorial has been necessitated by the fact that since the tutorial was written, the general state of development on Minecraft shaders has advanced somewhat, and other developers have identified several areas where this can be improved.
 
 ## Prerequisites
 :::caution[Warning]
