--- a/src/content/docs/current/Reference/Constants/colortex_mipmaps.mdx
+++ b/src/content/docs/current/Reference/Constants/colortex_mipmaps.mdx
@@ -12,6 +12,6 @@ sidebar:
 
 ---
 
-This directive tells Iris to generate a mipmap chain for a [colortex](/current/reference/buffers/colortex) attachment. The mipmap chain will be generated directly before the program where the directive is included, if there are multiple programs it will be re-generated before each program containing the directive. This directive is only valid for [`begin`](/current/reference/programs/begin), [`prepare`](/current/reference/programs/prepare), [`deferred`](/current/reference/programs/deferred), or [`composite`](/current/reference/programs/composite) programs.
+This directive tells Iris to generate a mipmap chain for a [colortex](/current/reference/buffers/colortex) attachment. The mipmap chain will be generated directly before the program where the directive is included, if there are multiple programs it will be re-generated before each program containing the directive. This directive is only valid for the *fragment* stage of [`begin`](/current/reference/programs/begin), [`prepare`](/current/reference/programs/prepare), [`deferred`](/current/reference/programs/deferred), or [`composite`](/current/reference/programs/composite) programs.
 
 Replace `<bufferName>` with the name of a colortex sampler (e.g. `colortex2`).
