--- a/src/content/docs/current/Reference/Mod Support/distant_horizons.mdx
+++ b/src/content/docs/current/Reference/Mod Support/distant_horizons.mdx
@@ -8,6 +8,10 @@ sidebar:
 [Distant Horizons](https://modrinth.com/mod/distanthorizons) is a mod which enables far greater render distances through the use of LODs. Iris allows shaders to integrate with this mod, ensuring that the blend between the vanilla terrain and the DH terrain can be seamless.
 
 ## Programs
+:::danger
+All Distant Horizons programs must use the `compatibility` profile.
+:::
+
 ### Terrain
 Terrain gets the program `dh_terrain`. This runs before normal terrain.
 
