--- a/src/content/docs/current/Reference/Buffers/atlases.mdx
+++ b/src/content/docs/current/Reference/Buffers/atlases.mdx
@@ -52,6 +52,6 @@ For information on how to use these values, see [PBR Standards](/current/how-to/
 | `b`       | 0             |
 | `a`       | 0             |
 
-*Note that the values returned when sampling the texture are in the 0-1 range.*
+*Note that the values returned when sampling the texture are in the 0-1 range, whereas they are displayed here in the 0-255 range.*
 
 For information on how to use these values, see [PBR Standards](/current/how-to/pbr_standards/).
