fix: Miscellaneous: move cape ids to item.properties where they belong

--- a/src/content/docs/current/Reference/Miscellaneous/item_properties.mdx
+++ b/src/content/docs/current/Reference/Miscellaneous/item_properties.mdx
@@ -21,4 +21,8 @@ item.3 = minecraft:iron_helmet minecraft:trim_lapis
 
 The optional namespace allows support for modded items. Multiple items can be assigned to a single ID, however a single item can only be assigned to a single ID. IDs are stored internally as 16-bit unsigned integers, and can store values between `0` and `65535`.
 
-Armor trim can be assigned with `trim_<material>`, for example `trim_emerald`.
+### Hardcoded IDs
+The following IDs do not exist in Minecraft but are hardcoded by Iris:
+- Armor trim can be assigned with `trim_<material>`, for example `trim_emerald`.
+- `minecraft:player_cape`: Player cape (without elytra).
+- `minecraft:elytra_with_cape`: Player cape (with elytra).
