--- a/src/content/docs/current/Reference/Uniforms/overview.mdx
+++ b/src/content/docs/current/Reference/Uniforms/overview.mdx
@@ -121,15 +121,15 @@ Below is an index of all uniforms available in Iris. Uniforms marked as <Badge t
 | [logicalHeightLimit](/current/reference/uniforms/biome#logicalheightlimit)   | int   |               | Logical height of the current dimension                             | <Badge text="Iris Exclusive" variant="tip"/>      |
 
 ## Rendering
-| Uniform                                                    | Type  | Value range      | Description                                                       | Tag |
-| ---------------------------------------------------------- | ----- | ---------------- | ----------------------------------------------------------------- | --- |
+| Uniform                                                            | Type  | Value range      | Description                                                       | Tag |
+| ------------------------------------------------------------------ | ----- | ---------------- | ----------------------------------------------------------------- | --- |
 | [near](/current/reference/uniforms/rendering#near)                 | float | 0.05             | Near clipping plane distance                                      |     |
 | [far](/current/reference/uniforms/rendering#far)                   | float | (0, - )          | Current render distance in blocks                                 |     |
 | [alphaTestRef](/current/reference/uniforms/rendering#alphatestref) | float | [0,1]            | Cutout alpha discard threshold                                    |     |
 | [chunkOffset](/current/reference/uniforms/rendering#chunkoffset)   | vec3  |                  | Chunk offset for terrain model space position                     |     |
 | [entityColor](/current/reference/uniforms/rendering#entitycolor)   | vec4  | [0,1]            | Entity tint color                                                 |     |
 | [blendFunc](/current/reference/uniforms/rendering#blendfunc)       | ivec4 |                  | Alpha blending function multipliers: (srcRGB, dstRGB, srcA, dstA) |     |
-| [atlasSize](/current/reference/uniforms/rendering#atlassize)       | ivec2 | [0, - )          | Size of the texture atlas, `0` if not bound                       |     |
+| [atlasSize](/current/reference/uniforms/rendering#atlassize)       | ivec2 | [0, - )          | Resolution of the texture atlas, `0` if not bound                 |     |
 | [renderStage](/current/reference/uniforms/rendering#renderstage)   | int   |                  | "Render stage" of the current geometry                            |     |
 | [fogColor](/current/reference/uniforms/rendering#fogcolor)         | vec3  | [0,1]            | Horizon fog color                                                 |     |
 | [skyColor](/current/reference/uniforms/rendering#skycolor)         | vec3  | [0,1]            | Upper sky color                                                   |     |
