replace feature flag link on overview with buffers

--- a/src/content/docs/current/Reference/overview.mdx
+++ b/src/content/docs/current/Reference/overview.mdx
@@ -30,6 +30,11 @@ Unless otherwise noted, these docs assume the root directory (`/`) to be your Mi
   href="/current/reference/programs/overview"
 />
 <LinkCard
+  title="Buffers"
+  description="What buffers you can read from and write to, and in what way."
+  href="/current/reference/buffers"
+/>
+<LinkCard
   title="Uniforms"
   description="Values available to all programs."
   href="/current/reference/uniforms/overview"
@@ -38,9 +43,4 @@ Unless otherwise noted, these docs assume the root directory (`/`) to be your Mi
   title="Attributes"
   description="Per-vertex data available only in the vertex shader."
   href="/current/reference/attributes/overview"
-/>
-<LinkCard
-  title="Feature Flags"
-  description="Query the activation state of certain Iris exclusive features."
-  href="/current/reference/shadersproperties/flags"
 />
